fix spacing for item table

--- a/ui/src/assets/style.scss
+++ b/ui/src/assets/style.scss
@@ -1,1 +1,5 @@
-@import "./bootstrap.scss"
+@import "./bootstrap.scss";
+
+.pre-preserve {
+	white-space: preserve;
+}
